# WebRviz

./: .gitignore  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  conf.py  make.bat  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/en/: index.rst
docs/en/api/: asset_server.rst  config.rst  custom_select.rst  pointcloud.rst  robot_loader.rst  ros_client.rst  rviz_config.rst  scene_manager.rst  trajectory_charts.rst  ui_settings.rst
docs/zh/: index.rst
docs/zh/api/: asset_server.rst  config.rst  custom_select.rst  pointcloud.rst  robot_loader.rst  ros_client.rst  rviz_config.rst  scene_manager.rst  trajectory_charts.rst  ui_settings.rst
scripts/: demo_webrviz.launch.py  package_tar.sh
web_rviz/: index.html  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts
web_rviz/public/rviz/: moveit.rviz
web_rviz/public/urdf/: five_axis.urdf
web_rviz/src/: config.ts  customSelect.ts  globals.d.ts  main.ts  style.css  trajectoryCharts.ts  uiSettings.ts
web_rviz/src/ros/: pointcloud.ts  rosClient.ts
web_rviz/src/rviz/: rvizConfig.ts
web_rviz/src/visualization/: robotLoader.ts  sceneManager.ts
web_rviz/tools/: ros_info_client.py  serve_webrviz.py
webrviz_asset_server/: CMakeLists.txt  package.xml
webrviz_asset_server/launch/: asset_server.launch
webrviz_asset_server/scripts/: serve_ros_packages.py
webrviz_interfaces/: CMakeLists.txt  package.xml
webrviz_interfaces/srv/: GetInterfaceText.srv
webrviz_moveit_observer/: package.xml  setup.cfg  setup.py
webrviz_moveit_observer/launch/: observer.launch.py
webrviz_moveit_observer/webrviz_moveit_observer/: observer_node.py
