<?xml version="1.0"?>
<package format="2">
  <name>webrviz_asset_server</name>
  <version>0.1.0</version>
  <description>HTTP server for exposing ROS package assets to WebRviz.</description>

  <maintainer email="try@123.com">WebRviz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <export />
</package>
