<?xml version="1.0"?>
<package format="3">
  <name>webrviz_moveit_observer</name>
  <version>0.1.0</version>
  <description>Observe MoveIt 2 actions and republish stable WebRviz event topics.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>webrviz_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
